--- a/Thesis.bib
+++ b/Thesis.bib
@@ -10052,3 +10052,43 @@ url="https://doi.org/10.1007/978-1-4684-0991-8_17"
 					        primaryClass   = "hep-lat",
 						      SLACcitation   = "%%CITATION = ARXIV:1904.02046;%%"
 						      }
+
+@article{CMS:2014xfa,
+      author         = "Khachatryan, Vardan and others",
+            title          = "{Observation of the rare $B^0_s\to\mu^+\mu^-$ decay from
+                        the combined analysis of CMS and LHCb data}",
+			      collaboration  = "CMS, LHCb",
+			            journal        = "Nature",
+				          volume         = "522",
+					        year           = "2015",
+						      pages          = "68-72",
+						            doi            = "10.1038/nature14474",
+							          eprint         = "1411.4413",
+								        archivePrefix  = "arXiv",
+									      primaryClass   = "hep-ex",
+									            reportNumber   = "CERN-PH-EP-2014-220, CMS-BPH-13-007, LHCB-PAPER-2014-049",
+										          SLACcitation   = "%%CITATION = ARXIV:1411.4413;%%"
+											  }
+
+
+@unpublished{RBCmichigan,
+title= {Semi-leptonic form factors for $B_s \to K l \nu$ and $B_s \to D_s l \nu$ },
+author = {Witzel O. and Flynn J. and Juettner A. and Soni A. and Tsang J. T. },
+year = {2018},
+note= {36th Annual International Symposium on Lattice Field Theory, July 22-28, 2018, East Lansing, MI, USA},
+URL= {https://indico.fnal.gov/event/15949/session/3/contribution/233},
+}
+
+@article{Koponen:2013tua,
+      author         = "Koponen, J. and Davies, C. T. H. and Donald, G. C. and
+                        Follana, E. and Lepage, G. P. and Na, H. and Shigemitsu,
+                        J.",
+			      title          = "{The shape of the $D\to K$ semileptonic form factor from
+                        full lattice QCD and $V_{cs}$}",
+			      year           = "2013",
+			            eprint         = "1305.1462",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-lat",
+						      SLACcitation   = "%%CITATION = ARXIV:1305.1462;%%"
+						      }
+						      
