--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,13 +1,6 @@
 ﻿\chapter{Conclusions}
 
-In this work, I have discovered some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge very fast. $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligable pieces of the spacial vector current have large magnitudes:
-\begin{align}
-  V_k^{(2)}\sim V_k^{(4)} \sim 0.35\times V_k^{(0)}\,.
-\end{align}
-I attempted some approaches to non-perturbatively renormalizing the NRQCD-HISQ currents in order to account for these issues, with limited success. 
-
-We
-produced the first published results of applying the heavy-HISQ approach to semileptonic form factors. We found a new determination of $h_{A_1}^s(1)$, twice as accurate as the previous result and containing considerably fewer assumptions -
+In this work, we produced the first published results of applying the heavy-HISQ approach to semileptonic form factors. We found a new determination of $h_{A_1}^s(1)$, twice as accurate as the previous result and containing considerably fewer assumptions -
 \begin{align}
   \mathcal{F}^{B_s\to D_s^*}(1) = h^s_{A_1}(1) = 0.9020(96)_{\text{stat}}(90)_{\text{sys}}\,.
 \end{align}
@@ -15,9 +8,16 @@ Future experimental data may be combined with this result to produce a new deter
 
 We found $B_s\to D_sl\nu$ form factors using heavy-HISQ, also improving on the precision in comparison to previous lattice results. For the first time, we were able to obtain lattice data spanning the entire $q^2$ range, due to the properties of the heavy-HISQ method. From these form factors, we found
 \begin{align}
-  R_{D_s}|_{\text{SM}} = 0.2955(35),
+  R_{D_s}|_{\text{SM}} = 0.2985(51),
 \end{align}
 which can be combined with future experimental data to provide a new test of the Standard Model, namely a new probe into the possibility of lepton flavour violation.
+
+Besides the successes from the heavy-HISQ approach, I have discovered some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge very fast. $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligable pieces of the spacial vector current have large magnitudes:
+\begin{align}
+  V_k^{(2)}\sim V_k^{(4)} \sim 0.35\times V_k^{(0)}\,.
+\end{align}
+I attempted some approaches to non-perturbatively renormalizing the NRQCD-HISQ currents in order to account for these issues, with limited success. 
+
 
 Heavy-HISQ calculations are more computationally costly than their equivalent calculations using NRQCD for the $b$. Taking into account the need for finer lattices and multiple data with different $m_h$ values, heavy-HISQ costs something of the order of 20 times more than NRQCD. However, the cost in human time of NRQCD, via perturbative matching calculations and larger and less stable correlator fits, is clearly larger than for heavy-HISQ. Also, heavy-HISQ does not contain assumptions of negligible subleading terms in the relativistic expansion or validity of perturbation theory via the matching.
 
