--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -54,12 +54,14 @@ All results and figures presented are my own, except for Fig. \ref{fig:alpha_s} 
 
 \thispagestyle{empty}
 
-%% \vspace*{\stretch{2}}
-%% \begin{center}
+\vspace*{\stretch{2}}
+\begin{center}
 %%   %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
-%%   \emph{'Everything I know right now is probably wrong.'} - wdbm
-%% \end{center}
-%% \vspace{\stretch{3}}
+  %%   \emph{'Everything I know right now is probably wrong.'} - wdbm
+  \emph{'This hasn't gone anything like what I hoped'} - Dan Hatton
+\end{center}
+\vspace{\stretch{3}}
+
 
 \end{titlepage}
 \sloppy
