--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -58,7 +58,7 @@ All results and figures presented are my own, except for Fig. \ref{fig:alpha_s} 
 \begin{center}
 %%   %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
   %%   \emph{'Everything I know right now is probably wrong.'} - wdbm
-  \emph{'This hasn't gone anything like what I hoped'} - Dan Hatton
+  \emph{'This hasn't gone anything like how I hoped'} - Dan Hatton
 \end{center}
 \vspace{\stretch{3}}
 
